--- a/atm-spring-boot-a2973/Jenkinsfile
+++ b/atm-spring-boot-a2973/Jenkinsfile
@@ -1,14 +1,16 @@
 pipeline{
     agent any
 
+        tools {
+            maven 'MAVEN_HOME'
+        }
+
     stages{
         stage('Compile'){
 
             steps{
-                withMaven(maven : 'MAVEN_HOME'){
                   sh 'Hello from pipeline demo'
                   build 'atm-spring-boot-a2973'
-                }
             }
         }
     }
